Password recovery via Steam (#418)
fixes #393